testing/tests/ui/cycle.rs
use rinja::Template;

#[derive(Template)]
#[template(path = "cycle2.html")]
struct Cycle;

fn main() {
}
